--- a/ec2.yml
+++ b/ec2.yml
@@ -1,4 +1,4 @@
-[200~                                                                              InstanceSecurityGroup:
+                                                                              InstanceSecurityGroup:
 
       Type: 'AWS::EC2::SecurityGroup'
 
